# ppx_stable

./: CHANGES.md  README.md  ppx_stable.opam
example/: dune  test.ml
src/: abstract.ml  abstract.mli  ast_helpers.ml  ast_helpers.mli  dune  generic_map.ml  generic_map.mli  invariants.ml  invariants.mli  naming.ml  naming.mli  ppx_stable.ml  record.ml  record.mli  variants.ml  variants.mli
tests/: dune  errors.mlt  parametric.ml  parametric.mlt  polymorphic_variant_errors.mlt  ppx_stable_test.ml  recursive.ml  signatured_conversion_functions.ml  signatured_conversion_functions.mli  test.ml  test.mlt  test_polymorphic_variants.ml  unsupported_type_errors.mlt
