opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_stable"
bug-reports: "https://github.com/janestreet/ppx_stable/issues"
dev-repo: "git+https://github.com/janestreet/ppx_stable.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_stable/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "ppxlib_jane"
  "dune"        {>= "3.17.0"}
  "ppxlib"      {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Stable types conversions generator"
description: "
A ppx extension for easier implementation of conversion functions between almost
identical types.
"
